# Agent-Yahoo-Finance

./: README.md  pyproject.toml
Documentos/: Seminario Electivo Modelos Multiagentes - Syllabus.docx  sesion3_agentes_con_herramientas.md
Notebooks/: 02_financial_research_agent.ipynb
agents/: __init__.py  agent.py  market_data.py  plots.py  prompts.py  tool_registry.py  tools.py
