[project]
name = "financial-research-agent"
version = "0.1.0"
description = "Un agente de investigacion financiera que obtiene datos de Yahoo Finance, calcula metricas de riesgo y rendimiento, genera visualizaciones e interpreta resultados con un LLM local."
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "ollama (>=0.6.2,<0.7.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"
